--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.strangelookingnerd.pedroprogressbarplugin
-pluginName = pedro-progress-bar-plugin
+pluginGroup = com.github.strangelookingnerd
+pluginName = pedro-progress-bar
 pluginRepositoryUrl = https://github.com/strangelookingnerd/pedro-progress-bar-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
