--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,18 +1,13 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.strangelookingnerd.pedroprogressbarplugin</id>
-    <name>pedro-progress-bar-plugin</name>
+    <id>com.github.strangelookingnerd:pedro-progress-bar</id>
+    <name>Pedro Progress Bar</name>
     <vendor>strangelookingnerd</vendor>
 
     <depends>com.intellij.modules.platform</depends>
 
-    <resource-bundle>messages.MyBundle</resource-bundle>
-
-    <extensions defaultExtensionNs="com.intellij">
-        <toolWindow factoryClass="com.github.strangelookingnerd.pedroprogressbarplugin.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
-    </extensions>
-
     <applicationListeners>
-        <listener class="com.github.strangelookingnerd.pedroprogressbarplugin.listeners.MyApplicationActivationListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
+        <listener class="com.github.strangelookingnerd.PedroProgressBarListener" topic="com.intellij.ide.ui.LafManagerListener"/>
+        <listener class="com.github.strangelookingnerd.PedroProgressBarListener" topic="com.intellij.openapi.application.ApplicationActivationListener"/>
     </applicationListeners>
 </idea-plugin>
