--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -172,6 +172,7 @@ jobs:
       - name: Qodana - Code Inspection
         uses: JetBrains/qodana-action@v2024.1.5
         with:
+          args: --config .github/qodana.yml
           cache-default-branch-only: true
 
   # Run plugin structure verification along with IntelliJ Plugin Verifier
