--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.strangelookingnerd:pedro-progress-bar</id>
+    <id>com.github.strangelookingnerd.pedro-progress-bar</id>
     <name>Pedro Progress Bar</name>
     <vendor>strangelookingnerd</vendor>
     <category>User Interface</category>
