--- a/gradle.properties
+++ b/gradle.properties
@@ -12,11 +12,13 @@ pluginUntilBuild = 242.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
-platformVersion = 2023.2.6
+platformVersion = 2023.2.7
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
+# Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
 platformPlugins =
+# Example: platformBundledPlugins = com.intellij.java
+platformBundledPlugins =
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.9
