--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,22 @@
 [versions]
 # libraries
+junit = "4.13.2"
 junit5 = "5.10.3"
 
 # plugins
-kotlin = "2.0.0"
 changelog = "2.2.1"
-gradleIntelliJPlugin = "1.17.4"
-qodana = "2024.1.5"
+intelliJPlatform = "2.0.0"
+kotlin = "2.0.0"
 kover = "0.8.3"
+qodana = "2024.1.5"
 
 [libraries]
+junit = { group = "junit", name = "junit", version.ref = "junit" }
 junit5 = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit5" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
-gradleIntelliJPlugin = { id = "org.jetbrains.intellij", version.ref = "gradleIntelliJPlugin" }
+intelliJPlatform = { id = "org.jetbrains.intellij.platform", version.ref = "intelliJPlatform" }
 kotlin = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
 qodana = { id = "org.jetbrains.qodana", version.ref = "qodana" }
