Automate gradleVersion updates

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -25,7 +25,7 @@
           "matchStrings": [
             "^gradleVersion\\s?=\\s?(?<currentValue>.*)$"
           ],
-          "depNameTemplate": "Gradle",
+          "depNameTemplate": "gradle",
           "datasourceTemplate": "gradle-version"
         }
       ]
