--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 # libraries
 junit = "4.13.2"
 junit5 = "5.12.0"
+junit5Launcher = "1.12.0"
 
 # plugins
 changelog = "2.2.1"
@@ -13,6 +14,7 @@ qodana = "2024.3.4"
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 junit5 = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit5" }
+junit5Launcher = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit5Launcher" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
