--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@
 junit = "4.13.2"
 junit5 = "5.12.1"
 junit5Launcher = "1.12.1"
+opentest4j = "1.3.0"
 
 # plugins
 changelog = "2.2.1"
@@ -15,6 +16,7 @@ qodana = "2024.3.4"
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 junit5 = { group = "org.junit.jupiter", name = "junit-jupiter", version.ref = "junit5" }
 junit5Launcher = { group = "org.junit.platform", name = "junit-platform-launcher", version.ref = "junit5Launcher" }
+opentest4j = { group = "org.opentest4j", name = "opentest4j", version.ref = "opentest4j" }
 
 [plugins]
 changelog = { id = "org.jetbrains.changelog", version.ref = "changelog" }
