Update with changes from template and baseline

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,15 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.strangelookingnerd
-pluginName = pedro-progress-bar
+pluginName = Pedro Progress Bar
 pluginRepositoryUrl = https://github.com/strangelookingnerd/pedro-progress-bar-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.10
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 253
-pluginUntilBuild =
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IU
-# platformType = IC
 platformVersion = 253.28294.169
 # platformVersion = 2025.3
 
